--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
     <groupId>My_FYP</groupId>
-    <artifactId>Rest</artifactId>
+    <artifactId>My_FYP</artifactId>
     <version>0.0.1</version>
     <packaging>pom</packaging>
 
     <modules>
-
         <module>databank</module>
         <module>scenario_1</module>
+        <module>scenario_2_TrafficInfo</module>
     </modules>
 </project>
