--- a/scenario_2_TrafficInfo/src/main/resources/application.properties
+++ b/scenario_2_TrafficInfo/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/upload?serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://localhost:3306/userinfo?serverTimezone=GMT
 spring.datasource.username=root
 spring.datasource.password=23d78yyf
 
