--- a/scenario_2_TrafficInfo/src/main/resources/application.properties
+++ b/scenario_2_TrafficInfo/src/main/resources/application.properties
@@ -4,3 +4,18 @@ spring.datasource.password=23d78yyf
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
+
+
+
+server.port=8083
+server.address=127.0.0.1
+server.ssl.key-store=scenario_2_TrafficInfo/src/main/store/sslServer.p12
+server.ssl.key-store-password=961008
+server.ssl.key-alias=sslServer
+server.ssl.keyStoreType=JKS
+
+server.ssl.trust-store=scenario_2_TrafficInfo/src/main/store/sslServer.p12
+server.ssl.trust-store-password=961008
+server.ssl.client-auth=need
+server.ssl.trust-store-type=JKS
+server.ssl.trust-store-provider=SUN
