--- a/scenario_2_TrafficInfo/src/main/resources/application.properties
+++ b/scenario_2_TrafficInfo/src/main/resources/application.properties
@@ -8,13 +8,15 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 server.port=8083
-server.ssl.key-store=scenario_2_TrafficInfo/src/main/store/server.jks
-server.ssl.key-store-password=2378
-server.ssl.key-alias=server
-server.ssl.keyStoreType=JKS
 
-#server.ssl.trust-store=scenario_2_TrafficInfo/src/main/store/server.jks
-#server.ssl.trust-store-password=2378
-server.ssl.client-auth=need
-#server.ssl.trust-store-type=JKS
+server.ssl.enabled=true
+server.ssl.key-store-type=JKS
+server.ssl.key-store=scenario_2_TrafficInfo/src/main/store/localhost.jks
+server.ssl.key-store-password=961008
+server.ssl.key-alias=server
+
+server.ssl.trust-store=scenario_2_TrafficInfo/src/main/store/localhost.jks
+server.ssl.trust-store-password=961008
 server.ssl.trust-store-provider=SUN
+server.ssl.trust-store-type=JKS
+server.ssl.client-auth=need
