present two type of SSL authentication certificates 1. keystore : self sign certificate 2. sslopen : certificate chain

--- a/scenario_2_TrafficInfo/src/main/resources/application.properties
+++ b/scenario_2_TrafficInfo/src/main/resources/application.properties
@@ -11,12 +11,25 @@ server.port=8083
 
 server.ssl.enabled=true
 server.ssl.key-store-type=JKS
-server.ssl.key-store=scenario_2_TrafficInfo/src/main/store/localhost.jks
+server.ssl.key-store=scenario_2_TrafficInfo/src/main/store/server.jks
 server.ssl.key-store-password=961008
-server.ssl.key-alias=server
+server.ssl.key-alias=1
 
-server.ssl.trust-store=scenario_2_TrafficInfo/src/main/store/localhost.jks
+server.ssl.trust-store=scenario_2_TrafficInfo/src/main/store/root.jks
 server.ssl.trust-store-password=961008
 server.ssl.trust-store-provider=SUN
 server.ssl.trust-store-type=JKS
 server.ssl.client-auth=need
+
+#present two type of SSL authentication certificates 1. keystore : self sign certificate 2. sslopen : certificate chain
+#server.ssl.enabled=true
+#server.ssl.key-store-type=JKS
+#server.ssl.key-store=scenario_2_TrafficInfo/src/main/store/localhost.jks
+#server.ssl.key-store-password=961008
+#server.ssl.key-alias=server
+
+#server.ssl.trust-store=scenario_2_TrafficInfo/src/main/store/localhost.jks
+#server.ssl.trust-store-password=961008
+#server.ssl.trust-store-provider=SUN
+#server.ssl.trust-store-type=JKS
+#server.ssl.client-auth=need
