scenario 3 server implemented

--- a/databank/src/main/resources/application.properties
+++ b/databank/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=23d78yyf
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
+
+server.port=8082
