--- a/scenario_3_PatientInfo/src/main/resources/application.properties
+++ b/scenario_3_PatientInfo/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/upload?serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://localhost:3306/user?serverTimezone=GMT
 spring.datasource.username=root
 spring.datasource.password=23d78yyf
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 
-server.port=8081
+server.port=8084
